image cropper bug fixes

--- a/src/app/modules/image-cropper/image-cropper.component.scss
+++ b/src/app/modules/image-cropper/image-cropper.component.scss
@@ -13,6 +13,7 @@
 .cropped-box {
   width: 45%;
   border-radius: 10px;
+  max-height: 500px;
 }
 
 @media screen and (min-width: 735px) {
@@ -24,7 +25,7 @@
 
 @media screen and (max-width: 735px) {
   .cropper-container {
-    max-height: 800px;
+    max-height: 1030px;
     flex-direction: column;
     gap: 15px;
   }
